--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
     </section>
   </header>
   <main class="content">
-
+    <section class="about">
+      <div class="container">
+        <div class="about__wrapper">
+          <article class="about__article">
+            <h3 class="about__title">What is it about? </h3>
+            <p class="about__text">
+              Building a website for a startup that looks amazing is not a rocket science anymore.
+            </p>
+          </article>
+          <article class="about__article">
+            <h3 class="about__title">Who is it for? </h3>
+            <p class="about__text">
+              Startups, small companies and teams, entrepreneurs and web developers.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
