--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
       <div class="container">
         <div class="about__wrapper">
           <article class="about__article">
-            <h3 class="about__title">What is it about? </h3>
+            <h4 class="about__title">What is it about? </h4>
             <p class="about__text">
               Building a website for a startup that looks amazing is not a rocket science anymore.
             </p>
           </article>
           <article class="about__article">
-            <h3 class="about__title">Who is it for? </h3>
+            <h4 class="about__title">Who is it for? </h4>
             <p class="about__text">
               Startups, small companies and teams, entrepreneurs and web developers.
             </p>
@@ -81,6 +81,43 @@
         </div>
       </div>
     </section>
+    <div class="customers">
+      <div class="container">
+        <ul class="customers__list">
+          <li class="customers__item">
+            <img class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+              alt="New-York Times logo">
+          </li>
+          <li class="customers__item">
+            <img class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+              alt="Forbes logo">
+          </li>
+          <li class="customers__item">
+            <img class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+              alt="Apple logo">
+          </li>
+          <li class="customers__item">
+            <img class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+              alt="Mashable logo">
+          </li>
+          <li class="customers__item">
+            <img class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+              alt="WSJ logo">
+          </li>
+          <li class="customers__item">
+            <img class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+              alt="Google logo">
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </main>
   <footer class="footer">
     <div class="container">
