--- a/index.html
+++ b/index.html
@@ -117,7 +117,25 @@
         </ul>
       </div>
     </div>
-
+    <section class="features">
+      <div class="container">
+        <div class="features__inner">
+          <h4 class="features__subtitle">Features</h4>
+          <h2 class="features__title">Easily find leads and customers</h2>
+          <p class="features__description">
+            Send one-off and automated email, push, and in-app messages to people. Create better stories.
+          </p>
+          <div class="features__advantage">
+            <f4 class="features__subtitle-aquire">Acquire new customers</f4>
+            <p class="features__aquire-description">
+              Everything you need to start building – including open-source code, documentation.
+            </p>
+          </div>
+          <div class="features__item features__item_building">Engage users</div>
+          <div class="features__item features__item_bucket">Develop across platforms</div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
