--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 More</span>
             </div>
           </div>
-          <div class="headline__banner">
-            <!-- <img src="#" alt="Headline banner" class="headline__img"> -->
-          </div>
+          <img class="headline__banner"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
+            alt="Headline banner">
         </div>
       </div>
     </section>
@@ -134,8 +134,43 @@
           <div class="features__item features__item_building">Engage users</div>
           <div class="features__item features__item_bucket">Develop across platforms</div>
         </div>
+        <img class="features__banner"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png"
+          alt="Feature banner" aria hidden="true">
       </div>
     </section>
+    <section class="inbox">
+      <div class="container">
+        <div class="inbox__inner">
+          <figure class="inbox__img">
+            <img class="inbox__img-decor"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
+              alt="Inbox decor image" aria-hidden="true">
+            <figcaption class="inbox__img-caption">
+              Connect with customers and grow faster
+            </figcaption>
+          </figure>
+          <div class="inbox__content">
+            <h4 class="inbox__subtitle">Team Inbox</h4>
+            <h2 class="inbox__title">Manage conversations</h2>
+            <p class="inbox__text">
+              One place to manage and respond to all conversations with leads and users. Receive messages from leads.
+            </p>
+            <div class="inbox__card">
+              <blockquote class="blockquote">
+                “Great widgets. Great selection. Great design and <b>easy to implement.</b> Definitely a huge time saver
+                for a web developer!”
+              </blockquote>
+              <div class="cite-inner">
+                <span class="cite-inner__author">Viella Malkovich</span>
+                <span class="cite-inner__position">Creative Director at Johnson</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
   <footer class="footer">
     <div class="container">
