--- a/index.html
+++ b/index.html
@@ -170,7 +170,51 @@
         </div>
       </div>
     </section>
-
+    <section class="communication">
+      <div class="container">
+        <div class="communication__inner">
+          <div class="communication__top">
+            <div class="communication__content">
+              <h4 class="communication__subtitle">Communicate Better</h4>
+              <h2 class="communication__title">Built for busy small teams</h2>
+              <p class="communication__top-text">
+                Three products that can be used independently or combined together for your company’s needs.
+              </p>
+              <button class="active-button communication__button" type="submit">
+                Get Started
+              </button>
+              <span class="communication__decor-line"></span>
+            </div>
+            <figure class="communication__decor">
+              <img class="communication__img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png"
+                alt="Communication image phone in hand" aria-hidden="true">
+              <figcaption class="communication__img-capture">A better way to acquire new users</figcaption>
+            </figure>
+          </div>
+          <div class="communication__bottom">
+            <div class="communication__item">
+              <p class="communication__item-text"><b>Subscriptions.</b> Foundation works with the tools and services
+                you already use every day.</p>
+              <a class="communication__item-link" href="#">Learn more about subscriptions</a>
+            </div>
+            <div class="communication__item">
+              <p class="communication__item-text">
+                <b>Felxible Hours.</b> Get started with our simple snippet of JavaScript or easy to install SDKs for
+                iOS and Android.
+              </p>
+              <a class="communication__item-link" href="#">Get more info about hours</a>
+            </div>
+            <div class="communication__item">
+              <p class="communication__item-text">
+                <b>Fast Communication.</b> We offer measures like 2FA and SSO to ensure the safety of your data.
+              </p>
+              <a class="communication__item-link" href="#">Communication guidelines</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
