--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="headline__description">Create live segments and target the right people for messages based on
               their
               behaviors.</p>
-            <div class="headline__buttons">
+            <div class="headline__buttons buttons">
               <button class="headline__active-button active-button" type="submit">
                 Get Started
               </button>
@@ -212,6 +212,52 @@
               <a class="communication__item-link" href="#">Communication guidelines</a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="audience">
+      <div class="container">
+        <div class="audience__inner">
+          <div class="audience__top">
+            <h4 class="audience__subtitle">Engage Visitors</h4>
+            <h2 class="audience__title">Understand your audience</h2>
+            <p class="audience__text">
+              Early stage company? Eligible applicants get all of our products for just $49 a month.
+            </p>
+            <div class="buttons">
+              <button class="active-button audience-button" type="submit">
+                Get Started
+              </button>
+              <span class="learn-more-button"><a href="#" class="learn-more-button__link"></a>Learn
+                More</span>
+            </div>
+          </div>
+          <ul class="audience__bottom">
+            <li class="audience__item">
+              <img class="audience__img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+                alt="Audience image">
+              <span class="audience__img-capture">Developers</span>
+            </li>
+            <li class="audience__item">
+              <img class="audience__img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+                alt="Audience image">
+              <span class="audience__img-capture">Entertainment</span>
+            </li>
+            <li class="audience__item">
+              <img class="audience__img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+                alt="Audience image">
+              <span class="audience__img-capture">Athletes</span>
+            </li>
+            <li class="audience__item">
+              <img class="audience__img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+                alt="Audience image">
+              <span class="audience__img-capture">Creators</span>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
