--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="libs/slick/slick.css">
   <link rel="stylesheet" href="styles.css">
   <title>Foundation</title>
 </head>
@@ -261,7 +262,7 @@
         </div>
       </div>
     </section>
-    <div class="customers">
+    <div class="customers customers_feedback">
       <div class="container">
         <ul class="customers__list">
           <li class="customers__item">
@@ -295,6 +296,46 @@
               alt="Google logo">
           </li>
         </ul>
+      </div>
+    </div>
+    <div class="feedback">
+      <div class="container">
+        <h4 class="feedback__subtitle">Trusted by the world’s most innovative businesses – big and small</h4>
+        <div class="feedback-slider">
+          <div class="feedback-slider__item">
+            <blockquote class="blockquote blockquote-feedback">
+              “Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages, send
+              emails, find freelancers. Perfect for sales, marketing, and support”
+            </blockquote>
+            <div class="cite-inner-feedback">
+              <span class="feedback-slider__item-author">Viella Malkovich</span>
+              <span class="feedback-slider__item-position">Creative Director at Johnson</span>
+            </div>
+          </div>
+          <div class="feedback-slider__item">
+            <blockquote class="blockquote blockquote-feedback">
+              “Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages, send
+              emails, find freelancers. Perfect for sales, marketing, and support”
+            </blockquote>
+            <div class="cite-inner-feedback">
+              <span class="feedback-slider__item-author">Viella Malkovich</span>
+              <span class="feedback-slider__item-position">Creative Director at Johnson</span>
+            </div>
+          </div>
+          <div class="feedback-slider__item">
+            <blockquote class="blockquote blockquote-feedback">
+              “Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages, send
+              emails, find freelancers. Perfect for sales, marketing, and support”
+            </blockquote>
+            <div class="cite-inner-feedback">
+              <span class="feedback-slider__item-author">Viella Malkovich</span>
+              <span class="feedback-slider__item-position">Creative Director at Johnson</span>
+            </div>
+          </div>
+        </div>
+        <img class="feedback__decor-img"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png"
+          alt="Green ballon image" aria-hidden="true">
       </div>
     </div>
   </main>
@@ -415,6 +456,9 @@
       </div>
     </div>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="libs/slick/slick.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
