--- a/index.html
+++ b/index.html
@@ -338,6 +338,36 @@
           alt="Green ballon image" aria-hidden="true">
       </div>
     </div>
+    <section class="hiring">
+      <div class="container">
+        <div class="hiring__inner">
+          <div class="hiring__description">
+            <h2 class="hiring__title">We’re hiring</h2>
+            <p class="hiring__about-text">
+              We’re a team of lifelong learners. We’re equal parts left and right brained.
+            </p>
+            <a href="#" class="hiring__link" aria-label="Learn more about Company">More about Company</a>
+          </div>
+          <div class="hiring__vacancy vacancy-block">
+            <div class="vacancy-block__item">
+              <h4 class="vacancy-block__title">Front-End Developer</h4>
+              <div class="vacancy-block__text">Los Angeles / Remote</div>
+              <button class="vacancy-block__btn" type="button"></button>
+            </div>
+            <div class="vacancy-block__item">
+              <h4 class="vacancy-block__title">Community Manager</h4>
+              <div class="vacancy-block__text">New York / Full-Time</div>
+              <button class="vacancy-block__btn" type="button"></button>
+            </div>
+            <div class="vacancy-block__item">
+              <h4 class="vacancy-block__title">UX/UI Designer</h4>
+              <div class="vacancy-block__text">New York / Full-Time</div>
+              <button class="vacancy-block__btn" type="button"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
