--- a/index.html
+++ b/index.html
@@ -368,6 +368,33 @@
         </div>
       </div>
     </section>
+    <section class="order">
+      <div class="container">
+        <div class="order__inner">
+          <img class="order__img"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
+            alt="Window illustration-window" aria-hidden="true">
+          <form class="order-form" action="">
+            <h3 class="order-form__title">Start your free trial.</h3>
+            <p class="order-form__text">
+              Get notified about company updates, news and blog posts. We hate spam.
+            </p>
+            <div class="order-form__input-elements">
+              <input class="order-form__input" type="email" placeholder="Enter your email" required>
+              <button class="active-button" type="submit">
+                Get Started
+              </button>
+            </div>
+            <div class="order-form__terms-caption">
+              <p class="order-form__terms-description">
+                Free 14-day trial · Easy setup · Cancel any time. Check out
+              </p>
+              <a class="order-form__terms-link" href="#">Terms of Use.</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
