--- a/index.html
+++ b/index.html
@@ -385,12 +385,10 @@
                 Get Started
               </button>
             </div>
-            <div class="order-form__terms-caption">
-              <p class="order-form__terms-description">
-                Free 14-day trial · Easy setup · Cancel any time. Check out
-              </p>
-              <a class="order-form__terms-link" href="#">Terms of Use.</a>
-            </div>
+            <p class="order-form__terms-description">
+              Free 14-day trial · Easy setup · Cancel any time. Check out <a class="order-form__terms-link"
+                href="#">Terms of Use.</a>
+            </p>
           </form>
         </div>
       </div>
@@ -416,11 +414,11 @@
             <a class="downloads__link" href="https://apps.apple.com/ua/app/apple-store" target="_blank"><img
                 class="downloads__img_appleapp"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
-                alt="Apple store download"></a>
+                alt="Apple store download"><span class="sr-only">Go to Apple store</span></a>
             <a class="downloads__link" href="https://play.google.com/store/" target="_blank"><img
                 class="downloads__img_googleapp"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
-                alt="Google play download"></a>
+                alt="Google play download"><span class="sr-only">Go to Google play store</span></a>
           </div>
         </div>
         <div class="additional-navigation">
@@ -493,21 +491,21 @@
         <ul class="social-links">
           <Li class="social-links__item">
             <a href="https://twitter.com/home" class="social-links__link" target="_blank"
-              aria-label="Go to Twitter"><img
+              aria-label="Go to Twitter"><img class="social-links__icon"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
-                alt="Twitter" class="social-links__icon"></a>
+                alt="Twitter"><span class="sr-only">Go to Twitter</span></a>
           </Li>
           <Li class="social-links__item">
             <a href="https://www.facebook.com/" class="social-links__link" target="_blank"
-              aria-label="Go to Facebook"><img
+              aria-label="Go to Facebook"><img class="social-links__icon"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
-                alt="Facebook" class="social-links__icon"></a>
+                alt="Facebook"><span class="sr-only">Go to Facebook</span></a>
           </Li>
           <Li class="social-links__item">
             <a href="https://www.linkedin.com/" class="social-links__link" target="_blank"
-              aria-label="Go to Linkedin"><img
+              aria-label="Go to Linkedin"><img class="social-links__icon"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
-                alt="Linkedin" class="social-links__icon"></a>
+                alt="Linkedin"><span class="sr-only">Go to Linkedin</span></a>
           </Li>
         </ul>
       </div>
