--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
           <a class="navigation__item" href="#">Stories</a>
           <a class="navigation__item" href="#">Library<i class="navigation__arrow"></i></a>
         </nav>
-        <button class="active-button" type="submit">
+        <div class="sandvich-menu">
+          <button class="menu-btn" type="button">
+            <span class="menu-btn__string"></span>
+          </button>
+        </div>
+        <button class="header__active-button active-button" type="submit">
           Get Started
         </button>
       </div>
     </div>
-    <section class="headline">
+    <!-- <section class="headline">
       <div class="container">
         <div class="headline__wrapper">
           <div class="headline__content">
@@ -61,9 +66,9 @@
             alt="Headline banner">
         </div>
       </div>
-    </section>
+    </section> -->
   </header>
-  <main class="content">
+  <!-- <main class="content">
     <section class="about">
       <div class="container">
         <div class="about__wrapper">
@@ -393,8 +398,8 @@
         </div>
       </div>
     </section>
-  </main>
-  <footer class="footer">
+  </main> -->
+  <!-- <footer class="footer">
     <div class="container">
       <div class="footer__navigation">
         <div class="about__company">
@@ -510,7 +515,7 @@
         </ul>
       </div>
     </div>
-  </footer>
+  </footer> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="libs/slick/slick.min.js"></script>
   <script src="js/main.js"></script>
