add responcive headline

--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
 <body>
 
   <header class="header">
-    <div class="container">
-      <div class="header__top">
-        <div class="logo">
-          <a href="#" class="logo__link">
-            <img class="logo__img" src="img/logo.svg" alt="logo">
-          </a>
-          <div class="logo__text">
-            <div class="logo__name">Foundation</div>
-            <div class="logo__description">Startup landing template</div>
-          </div>
+    <div class="header__top">
+      <div class="logo">
+        <a href="#" class="logo__link">
+          <img class="logo__img" src="img/logo.svg" alt="logo">
+        </a>
+        <div class="logo__text">
+          <div class="logo__name">Foundation</div>
+          <div class="logo__description">Startup landing template</div>
         </div>
-        <nav class="navigation">
-          <a class="navigation__item navigation__item_selected" href="#">Home</a>
-          <a class="navigation__item" href="#">Stories</a>
-          <a class="navigation__item" href="#">Library<i class="navigation__arrow"></i></a>
-        </nav>
-        <div class="sandvich-menu">
-          <button class="menu-btn" type="button">
-            <span class="menu-btn__string"></span>
-          </button>
-        </div>
-        <button class="header__active-button active-button" type="submit">
-          Get Started
+      </div>
+      <nav class="navigation">
+        <a class="navigation__item navigation__item_selected" href="#">Home</a>
+        <a class="navigation__item" href="#">Stories</a>
+        <a class="navigation__item" href="#">Library<i class="navigation__arrow"></i></a>
+      </nav>
+      <div class="sandvich-menu">
+        <button class="menu-btn" type="button">
+          <span class="menu-btn__string"></span>
         </button>
       </div>
+      <button class="header__active-button active-button" type="submit">
+        Get Started
+      </button>
     </div>
-    <!-- <section class="headline">
+    <div class="container">
+    </div>
+    <section class="headline">
       <div class="container">
         <div class="headline__wrapper">
           <div class="headline__content">
@@ -57,7 +57,8 @@
               <button class="headline__active-button active-button" type="submit">
                 Get Started
               </button>
-              <span class="learn-more-button"><a href="#" class="learn-more-button__link"></a>Learn
+              <span class="learn-more-button headline__learn-more-button"><a href="#"
+                  class="learn-more-button__link"></a>Learn
                 More</span>
             </div>
           </div>
@@ -66,7 +67,7 @@
             alt="Headline banner">
         </div>
       </div>
-    </section> -->
+    </section>
   </header>
   <!-- <main class="content">
     <section class="about">
