--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </section>
   </header>
-  <!-- <main class="content">
+  <main class="content">
     <section class="about">
       <div class="container">
         <div class="about__wrapper">
@@ -88,7 +88,7 @@
         </div>
       </div>
     </section>
-    <div class="customers">
+    <!-- <div class="customers">
       <div class="container">
         <ul class="customers__list">
           <li class="customers__item">
@@ -398,8 +398,8 @@
           </form>
         </div>
       </div>
-    </section>
-  </main> -->
+    </section> -->
+  </main>
   <!-- <footer class="footer">
     <div class="container">
       <div class="footer__navigation">
