--- a/index.html
+++ b/index.html
@@ -88,43 +88,47 @@
         </div>
       </div>
     </section>
-    <!-- <div class="customers">
+    <div class="customers">
       <div class="container">
         <ul class="customers__list">
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
-              alt="New-York Times logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
-              alt="Forbes logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
-              alt="Apple logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
-              alt="Mashable logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
-              alt="WSJ logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
-              alt="Google logo">
-          </li>
+          <div class="customers__list-item">
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+                alt="New-York Times logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+                alt="Forbes logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+                alt="Apple logo">
+            </li>
+          </div>
+          <div class="customers__list-item">
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+                alt="Mashable logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+                alt="WSJ logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+                alt="Google logo">
+            </li>
+          </div>
         </ul>
       </div>
     </div>
-    <section class="features">
+    <!-- <section class="features">
       <div class="container">
         <div class="features__inner">
           <h4 class="features__subtitle">Features</h4>
