--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="customers">
       <div class="container">
         <ul class="customers__list">
-          <div class="customers__list-item">
+          <div class="customers__list-items">
             <li class="customers__item">
               <img class="customers__logo"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
@@ -108,7 +108,7 @@
                 alt="Apple logo">
             </li>
           </div>
-          <div class="customers__list-item">
+          <div class="customers__list-items">
             <li class="customers__item">
               <img class="customers__logo"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
@@ -128,7 +128,52 @@
         </ul>
       </div>
     </div>
-    <!-- <section class="features">
+    <section class="tips">
+
+      <div class="tip">
+        <span class="tip__subtitle">Acquire Customers</span>
+        <h2 class="tip__title">Easily find leads and customers</h2>
+        <p class="tip__description">
+          Send one-off and automated email, push, and in-app messages to people. Create better stories.
+        </p>
+        <figure class="tip__decoration">
+          <img class="tip__image"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png"
+            alt="Tips decoration" aria-hidden="true">
+          <figcaption class="tip__image-caption">A better way to acquire new users</figcaption>
+        </figure>
+      </div>
+      <div class="tip">
+        <span class="tip__subtitle">Engage Users</span>
+        <h2 class="tip__title">Engage with your audience</h2>
+        <p class="tip__description">
+          Send one-off and automated email, push, and in-app messages to people. Create better stories.
+        </p>
+        <figure class="tip__decoration">
+          <img class="tip__image"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-engage-user.png"
+            alt="Tips decoration" aria-hidden="true">
+          <figcaption class="tip__image-caption">Knowledge base and smart self-service</figcaption>
+        </figure>
+      </div>
+      <div class="tip">
+        <span class="tip__subtitle">Support</span>
+        <h2 class="tip__title">
+          The best customer experiences
+        </h2>
+        <p class="tip__description">
+          A beautifully simple system for tracking, prioritizing, and solving customer support tickets.
+        </p>
+        <figure class="tip__decoration">
+          <img class="tip__image"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-support.png"
+            alt="Tips decoration" aria-hidden="true">
+          <figcaption class="tip__image-caption">Live chat and messaging</figcaption>
+        </figure>
+      </div>
+
+    </section>
+    <section class="features">
       <div class="container">
         <div class="features__inner">
           <h4 class="features__subtitle">Features</h4>
@@ -181,7 +226,7 @@
         </div>
       </div>
     </section>
-    <section class="communication">
+    <!-- <section class="communication">
       <div class="container">
         <div class="communication__inner">
           <div class="communication__top">
