--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="communication">
+    <section class="communication">
       <div class="container">
         <div class="communication__inner">
           <div class="communication__top">
@@ -247,6 +247,7 @@
                 alt="Communication image phone in hand" aria-hidden="true">
               <figcaption class="communication__img-capture">A better way to acquire new users</figcaption>
             </figure>
+            <span class="communication__decor-line communication__decor-line_mobile"></span>
           </div>
           <div class="communication__bottom">
             <div class="communication__item">
@@ -271,7 +272,7 @@
         </div>
       </div>
     </section>
-    <section class="audience">
+    <!-- <section class="audience">
       <div class="container">
         <div class="audience__inner">
           <div class="audience__top">
