--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="audience">
+    <section class="audience">
       <div class="container">
         <div class="audience__inner">
           <div class="audience__top">
@@ -285,7 +285,8 @@
               <button class="active-button audience-button" type="submit">
                 Get Started
               </button>
-              <span class="learn-more-button"><a href="#" class="learn-more-button__link"></a>Learn
+              <span class="learn-more-button audience-learn-more-button"><a href="#"
+                  class="learn-more-button__link"></a>Learn
                 More</span>
             </div>
           </div>
@@ -321,40 +322,44 @@
     <div class="customers customers_feedback">
       <div class="container">
         <ul class="customers__list">
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
-              alt="New-York Times logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
-              alt="Forbes logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
-              alt="Apple logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
-              alt="Mashable logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
-              alt="WSJ logo">
-          </li>
-          <li class="customers__item">
-            <img class="customers__logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
-              alt="Google logo">
-          </li>
+          <div class="customers__list-items">
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+                alt="New-York Times logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+                alt="Forbes logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+                alt="Apple logo">
+            </li>
+          </div>
+          <div class="customers__list-items">
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+                alt="Mashable logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+                alt="WSJ logo">
+            </li>
+            <li class="customers__item">
+              <img class="customers__logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+                alt="Google logo">
+            </li>
+          </div>
         </ul>
       </div>
     </div>
-    <div class="feedback">
+    <!-- <div class="feedback">
       <div class="container">
         <h4 class="feedback__subtitle">Trusted by the world’s most innovative businesses – big and small</h4>
         <div class="feedback-slider">
