--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </ul>
       </div>
     </div>
-    <!-- <div class="feedback">
+    <div class="feedback">
       <div class="container">
         <h4 class="feedback__subtitle">Trusted by the world’s most innovative businesses – big and small</h4>
         <div class="feedback-slider">
@@ -399,7 +399,7 @@
           alt="Green ballon image" aria-hidden="true">
       </div>
     </div>
-    <section class="hiring">
+    <!-- <section class="hiring">
       <div class="container">
         <div class="hiring__inner">
           <div class="hiring__description">
