--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="order">
+    <section class="order">
       <div class="container">
         <div class="order__inner">
           <img class="order__img"
@@ -454,7 +454,7 @@
             </p>
             <div class="order-form__input-elements">
               <input class="order-form__input" type="email" placeholder="Enter your email" required>
-              <button class="active-button" type="submit">
+              <button class="active-button active-button-order" type="submit">
                 Get Started
               </button>
             </div>
@@ -465,7 +465,7 @@
           </form>
         </div>
       </div>
-    </section> -->
+    </section>
   </main>
   <!-- <footer class="footer">
     <div class="container">
