--- a/index.html
+++ b/index.html
@@ -467,17 +467,17 @@
       </div>
     </section>
   </main>
-  <!-- <footer class="footer">
-    <div class="container">
+  <footer class="footer">
+    <div class="footer__inner">
       <div class="footer__navigation">
         <div class="about__company">
-          <div class="logo">
+          <div class="logo footer-logo">
             <a href="#" class="logo__link">
-              <img class="logo__img" src="img/logo-dark.svg" alt="logo">
+              <img class="logo__img footer-logo__img" src="img/logo-dark.svg" alt="logo">
             </a>
-            <div class="logo__text">
+            <div class="logo__text footer-logo__text">
               <div class="logo__name">Foundation</div>
-              <div class="logo__description">Startup landing template</div>
+              <div class="logo__description logo__description-footer">Startup landing template</div>
             </div>
           </div>
           <p class="footer__description">
@@ -494,62 +494,62 @@
                 alt="Google play download"><span class="sr-only">Go to Google play store</span></a>
           </div>
         </div>
-        <div class="additional-navigation">
-          <div class="additional-navigation__column nav-links">
-            <h3 class="nav-links__title">Product</h3>
-            <ul class="nav-links__list">
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Acquire Users
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Content Marketing
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Website Templates
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Customer Management
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Virtual Inbox
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="additional-navigation__column nav-links">
-            <h3 class="nav-links__title">Company</h3>
-            <ul class="nav-links__list">
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  About Foundation
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Brand Guidelines
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Press Kit
-                </a>
-              </li>
-              <li class="nav-links__list-item">
-                <a class="nav-links__list-link" href="#">
-                  Support
-                </a>
-              </li>
-            </ul>
-          </div>
+      </div>
+      <div class="additional-navigation">
+        <div class="additional-navigation__column nav-links">
+          <h3 class="nav-links__title">Product</h3>
+          <ul class="nav-links__list">
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Acquire Users
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Content Marketing
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Website Templates
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Customer Management
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Virtual Inbox
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="additional-navigation__column nav-links">
+          <h3 class="nav-links__title">Company</h3>
+          <ul class="nav-links__list">
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                About Foundation
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Brand Guidelines
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Press Kit
+              </a>
+            </li>
+            <li class="nav-links__list-item">
+              <a class="nav-links__list-link" href="#">
+                Support
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -583,7 +583,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="libs/slick/slick.min.js"></script>
   <script src="js/main.js"></script>
