--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     />
     <link rel="stylesheet" href="libs/slick/slick.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link type="image/x-icon" href="img/favicon.ico" rel="shortcut icon" />
+    <link type="Image/x-icon" href="img/favicon.ico" rel="icon" />
     <title>Foundation</title>
   </head>
 
