--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                   ><img
                     class="social-links__icon"
                     src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
-                    alt="Linkedin"
+                    alt="Linkedin icon"
                   /><span class="sr-only">Go to Linkedin</span></a
                 >
               </li>
